# codewars

golang/kyu3/: spiralize.go  spiralize_test.go  suite_test.go
golang/kyu4/: permutations.go  permutations_test.go  pyramids_slide_down.go  pyramids_slide_down_test.go  suite_test.go  sum_intervals.go  sum_intervals_test.go
golang/kyu5/: human_readable_time.go  human_readable_time_test.go  is_alphanumeric.go  is_alphanumeric_test.go  josephus.go  josephus_test.go  last_digit.go  last_digit_test.go  pete_baker.go  pete_baker_test.go
golang/kyu6/: kyu6_all_test.go
java/src/: Main.java  MainTest.java  PaginationHelper.java  SnakesLadders.java  SnakesLaddersTest.java  SolutionTest.java  Xbonacci.java  XbonacciTest.java
python/: poetry.toml  pyproject.toml
python/kyu5/: diagonal.py  diagonal_test.py  fibonacci_return.py  fibonacci_return_test.py
