[tool.poetry]
name = "codewars"
version = "0.1.0"
description = ""
authors = ["alexsanjoseph <alexsanjoseph@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.1,<3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
autopep8 = "^2.0.1"
pytest-icdiff = "^0.6"
pytest-watch = "^4.2.0"
pytest-testmon = "^1.4.2"
poethepoet = "^0.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test   = 'pytest'
test-watch   = 'ptw --runner "pytest --testmon"'